--- a/sobre.css
+++ b/sobre.css
@@ -52,7 +52,7 @@ nav {
 }
 
 .hero {
-    background-image: url(/imgs/sobre_bg.jpg);
+    background-image: url(imgs/sobre_bg.jpg);
     height: 630px;
     display: flex;
     flex-direction: column;
@@ -127,7 +127,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(/imgs/footer.jpg);
+    background-image: url(imgs/footer.jpg);
     background-size: cover;
     height: 150px;
     position: relative;
