--- a/solucoes.css
+++ b/solucoes.css
@@ -1,6 +1,4 @@
 body {
-    /* width: 80%;
-    margin: auto; */
     font-size: 62.5%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -52,7 +50,7 @@ nav {
 }
 
 .hero {
-    background-image: url(/imgs/solucoes_bg.jpg);
+    background-image: url(imgs/solucoes_bg.jpg);
     height: 630px;
     display: flex;
     flex-direction: column;
@@ -219,7 +217,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(/imgs/footer.jpg);
+    background-image: url(imgs/footer.jpg);
     background-size: cover;
     height: 150px;
     position: relative;
