--- a/solucoes.css
+++ b/solucoes.css
@@ -20,10 +20,25 @@ body {
     z-index: 3;
 }
 
+@media (max-width: 600px) {
+    .cabecalho {
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .cabecalho img {
     width: 15rem;
     height: 5rem;
     margin-left: 8px;
+}
+
+@media (max-width: 600px) {
+    .cabecalho img {
+        width: 10rem;
+        height: 3rem;
+    }
 }
 
 nav {
@@ -37,12 +52,26 @@ nav {
     font-size: 1.1rem;
 }
 
+@media (max-width: 600px) {
+    .menu {
+        font-size: 0.9rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+}
+
 .menu a {
     font-weight: 600;
     /* color: #0a2188; */
     color: black;
     text-decoration: none;
     padding: 10px;
+}
+
+@media (max-width: 600px) {
+    .menu a {
+        padding: 4px;
+    }
 }
 
 .menu a:hover {
@@ -57,12 +86,27 @@ nav {
     align-items: center;
 }
 
+@media (max-width: 600px) {
+    .hero {
+        height: 400px;
+        background-position: center;
+    }
+}
+
 .hero h1 {
     margin: 16rem auto 10px;
     font-size: 4rem;
     color: white;
     text-transform: uppercase;
     font-weight: 200
+}
+
+@media (max-width: 600px) {
+    .hero h1 {
+        font-size: 3rem;
+        text-align: center;
+        margin-top: 10.3rem;
+    }
 }
 
 .hero * {
@@ -79,11 +123,23 @@ nav {
     z-index: 0;
 }
 
+@media (max-width: 600px) {
+    .hero::before {
+        min-height: 400px;
+    }
+}
+
 .slogan {
     font-size: 1.4rem;
     font-style: italic;
     margin: 0;
     color: white;
+}
+
+@media (max-width: 600px) {
+    .slogan {
+        font-size: 1rem;
+    }
 }
 
 .titulo_secao {
@@ -94,9 +150,21 @@ nav {
     width: 70%;
 }
 
+@media (max-width: 600px) {
+    .titulo_secao {
+        font-size: 1.9rem;
+    }
+}
+
 .titulo_secao span {
     color: #3167b8;
     font-size: 2.7rem;
+}
+
+@media (max-width: 600px) {
+    .titulo_secao span {
+        font-size: 2.4rem;
+    }
 }
 
 .list-solucao {
@@ -104,6 +172,13 @@ nav {
     gap: 2rem;
     margin-top: 4rem;
     justify-content: space-evenly;
+}
+
+@media (max-width: 600px) {
+    .list-solucao {
+        flex-wrap: wrap;
+        margin: 1.4rem;
+    }
 }
 
 .list-solucao_item {
@@ -165,6 +240,12 @@ nav {
     margin: 4rem auto 5rem;
 }
 
+@media (max-width: 600px) {
+    .chamamento-duvida {
+        flex-direction: column;
+    }
+}
+
 .chamamento-duvida__auxiliar {
     display: flex;
     flex-direction: column;
@@ -175,6 +256,12 @@ nav {
 .chamamento-duvida img {
     width: 800px;
     height: 500px;
+}
+
+@media (max-width: 600px) {
+    .chamamento-duvida img {
+        display: none;
+    }
 }
 
 .chamamento-duvida_pergunta {
@@ -207,6 +294,12 @@ nav {
     font-weight: 600;
 }
 
+@media (max-width: 600px) {
+    .chamamento-duvida a {
+        margin-bottom: 2rem;
+    }    
+}
+
 .chamamento-duvida a:hover {
     background-color: white;
     color: #3167b8;
@@ -221,6 +314,13 @@ nav {
     background-size: cover;
     height: 150px;
     position: relative;
+}
+
+@media (max-width: 600px) {
+    .contatos-mais_informacoes {
+        text-align: center;
+    }
+    
 }
 
 .contatos-mais_informacoes::before {
