--- a/sobre.css
+++ b/sobre.css
@@ -22,10 +22,25 @@ body {
     z-index: 3;
 }
 
+@media (max-width: 600px) {
+    .cabecalho {
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .cabecalho img {
     width: 15rem;
     height: 5rem;
     margin-left: 8px;
+}
+
+@media (max-width: 600px) {
+    .cabecalho img {
+        width: 10rem;
+        height: 3rem;
+    }
 }
 
 nav {
@@ -39,12 +54,25 @@ nav {
     font-size: 1.1rem;
 }
 
+@media (max-width: 600px) {
+    .menu {
+        font-size: 0.9rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+}
+
 .menu a {
     font-weight: 600;
-    /* color: #0a2188; */
     color: black;
     text-decoration: none;
     padding: 10px;
+}
+
+@media (max-width: 600px) {
+    .menu a {
+        padding: 4px;
+    }
 }
 
 .menu a:hover {
@@ -59,12 +87,27 @@ nav {
     align-items: center;
 }
 
+@media (max-width: 600px) {
+    .hero {
+        height: 400px;
+        background-position: center;
+    }
+}
+
 .hero h1 {
     margin: 16rem auto 10px;
     font-size: 4rem;
     color: white;
     text-transform: uppercase;
     font-weight: 200
+}
+
+@media (max-width: 600px) {
+    .hero h1 {
+        font-size: 3rem;
+        text-align: center;
+        margin-top: 10.3rem;
+    }
 }
 
 .hero * {
@@ -81,11 +124,23 @@ nav {
     z-index: 0;
 }
 
+@media (max-width: 600px) {
+    .hero::before {
+        min-height: 400px;
+    }
+}
+
 .slogan {
     font-size: 1.4rem;
     font-style: italic;
     margin: 0;
     color: white;
+}
+
+@media (max-width: 600px) {
+    .slogan {
+        font-size: 1rem;
+    }
 }
 
 .titulo-menor {
@@ -103,24 +158,59 @@ nav {
     gap: 5rem;
 }
 
+@media (max-width: 600px) {
+    .apresentacao-geral {
+        flex-direction: column;
+        gap: 1rem;
+        margin-right: 1rem;
+    }
+}
+
 .apresentacao-geral__texto--destaque {
     font-weight: bold;
     font-size: 2.4rem;
     line-height: 1.1;
 }
 
+@media (max-width: 600px) {
+    .apresentacao-geral__texto--destaque {
+        font-size: 1.8rem;
+    }
+}
+
 .apresentacao-geral__texto--geral {
     font-size: 1.4rem;
+}
+
+@media (max-width: 600px) {
+    .apresentacao-geral__texto--geral {
+        font-size: 1rem;
+    }
 }
 
 .paragrafo-final {
     margin-bottom: 6rem;
 }
 
+@media (max-width: 600px) {
+    .paragrafo-final {
+        margin-bottom: 2rem;
+    }
+}
+
 .apresentacao-geral__video {
     display: flex;
     align-items: center;
     margin-right: 1rem;
+}
+
+@media (max-width: 600px) {
+    .apresentacao-geral__video {
+        margin-bottom: 3rem;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
 }
 
 .contatos-mais_informacoes {
@@ -131,6 +221,13 @@ nav {
     background-size: cover;
     height: 150px;
     position: relative;
+}
+
+@media (max-width: 600px) {
+    .contatos-mais_informacoes {
+        text-align: center;
+    }
+    
 }
 
 .contatos-mais_informacoes::before {
